k8s/catalog.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: catalog
  namespace: rabbitnest
spec:
  replicas: 1
  selector:
    matchLabels:
      app: catalog
  template:
    metadata:
      labels:
        app: catalog
    spec:
      containers:
      - name: catalog
        image: ashwinsai22/nestjs-microservices-rabbitmq:latest
        command: ["node", "dist/apps/catalog/main.js"]
---
apiVersion: v1
kind: Service
metadata:
  name: catalog
  namespace: rabbitnest
spec:
  selector:
    app: catalog
  ports:
  - port: 3000
