k8s/gateway.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway
  namespace: rabbitnest
spec:
  replicas: 2
  selector:
    matchLabels:
      app: gateway
  template:
    metadata:
      labels:
        app: gateway
    spec:
      containers:
      - name: gateway
        image: ashwinsai22/nestjs-microservices-rabbitmq:latest
        command: ["node", "dist/apps/gateway/main.js"]
        ports:
        - containerPort: 4000
---
apiVersion: v1
kind: Service
metadata:
  name: gateway
  namespace: rabbitnest
spec:
  selector:
    app: gateway
  ports:
  - port: 4000
    targetPort: 4000
