k8s/media.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: media
  namespace: rabbitnest
spec:
  replicas: 1
  selector:
    matchLabels:
      app: media
  template:
    metadata:
      labels:
        app: media
    spec:
      containers:
      - name: media
        image: ashwinsai22/nestjs-microservices-rabbitmq:latest
        command: ["node", "dist/apps/media/main.js"]
---
apiVersion: v1
kind: Service
metadata:
  name: media
  namespace: rabbitnest
spec:
  selector:
    app: media
  ports:
  - port: 3000
