k8s/search.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: search
  namespace: rabbitnest
spec:
  replicas: 1
  selector:
    matchLabels:
      app: search
  template:
    metadata:
      labels:
        app: search
    spec:
      containers:
      - name: search
        image: ashwinsai22/nestjs-microservices-rabbitmq:latest
        command: ["node", "dist/apps/search/main.js"]
---
apiVersion: v1
kind: Service
metadata:
  name: search
  namespace: rabbitnest
spec:
  selector:
    app: search
  ports:
  - port: 3000
