k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rabbitnest-ingress
  namespace: rabbitnest
spec:
  rules:
  - host: rabbitnest.bezawada.link
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: gateway
            port:
              number: 4000
